--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
@@ -3,7 +3,7 @@
 @page "/case/edit/{id:int}"
 @using QdaoCaseManager.Dtos
 @using QdaoCaseManager.Shared
-@using QdaoCaseManager.Shared.Dtos.Cases
+@using QdaoCaseManager.Shared.Dtos
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
@@ -89,7 +89,7 @@
     public int? Id { get; set; }
     public CreateUpdateCaseDto CaseDto { get; set; } = new();
 
-    public IList<CaseUserSelectList> UserSelectList = new List<CaseUserSelectList>();
+    public IList<SelectItem> UserSelectList = new List<SelectItem>();
 
     protected override async Task OnParametersSetAsync()
     {
@@ -123,7 +123,7 @@
     {
 
         var response = await HttpClient
-                            .GetFromJsonAsync<IList<CaseUserSelectList>>(
+                            .GetFromJsonAsync<IList<SelectItem>>(
                              "api/cases/GetUserSelectListItems");
 
         if (response is not null)
