--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Notes/Index.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Notes/Index.razor
@@ -16,7 +16,7 @@
     </div>
     <div class="card-body">
         <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-1">
                 <a href='/note/add' class="btn btn-outline-primary" role="button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
                         <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z" />
@@ -24,7 +24,7 @@
                     Add
                 </a>
             </div>
-            <div class="col-md-8">
+            <div class="col-md-11">
                 <input type="text" class="form-control" placeholder="Search note by content"
                  @bind="filter.SearchString" @bind:event="oninput" @onkeyup="LoadNotes" />
             </div>
@@ -38,13 +38,14 @@
 }
 else
 {
-    <table class="table table-responsive" width="100%">
+    <table class="table table-responsive">
         <thead class="table-group-divider">
             <tr>
                 <th>ID</th>
                 <th>Content</th>
                 <th>CaseTittle</th>
                 <th>CreateDate</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
