--- a/QdaoCaseManager/QdaoCaseManager/Components/Layout/NavMenu.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Layout/NavMenu.razor
@@ -28,6 +28,11 @@
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Case
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="caseHistory">
+                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Case History
+            </NavLink>
+        </div>
     </nav>
 </div>
 
