Update home page and Add .net 8 Global Exception Handler

--- a/QdaoCaseManager/QdaoCaseManager/Components/Pages/Error.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Pages/Error.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Error"
 @using System.Diagnostics
-
+@using QdaoCaseManager.Components.Account.Shared
+@layout AccountLayout
 <PageTitle>Error</PageTitle>
 
 <h1 class="text-danger">Error.</h1>
