Add login button in confirm page

--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ConfirmEmail.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ConfirmEmail.razor
@@ -16,10 +16,12 @@
         <div class="col-md-6 ads">
             <h1><span id="fl">QDAO</span><br /><span id="sl">Case Manager</span></h1>
         </div>
-        <div class="col-md-6 login-form">
+        <div class="col-md-6 login-form  text-center">
             <h2>Confirm email</h2>
-
+            <br />
+          
             <StatusMessage Message="@statusMessage" />
+            <a class="btn btn-success text-center" href="Account/Login">Back to Login</a>
         </div>
     </div>
 </div>
