--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/CaseHistory/Index.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/CaseHistory/Index.razor
@@ -1,10 +1,7 @@
 ﻿@page "/caseHistory";
 @using Microsoft.AspNetCore.Authorization
+@using QdaoCaseManager.Application.Cases.Dtos
 @using QdaoCaseManager.Client.Shared
-@using QdaoCaseManager.Extra
-@using QdaoCaseManager.Shared
-@using QdaoCaseManager.Shared.Dtos
-@using QdaoCaseManager.Shared.Dtos.Cases
 @attribute [Authorize]
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject HttpClient HttpClient
