--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
@@ -1,9 +1,8 @@
 ﻿﻿
 @page "/case/add"
 @page "/case/edit/{id:int}"
-@using QdaoCaseManager.Dtos
-@using QdaoCaseManager.Shared
-@using QdaoCaseManager.Shared.Dtos
+@using QdaoCaseManager.Application.Cases.Dtos
+@using QdaoCaseManager.DTOs.Common.Models
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
