--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
@@ -3,6 +3,7 @@
 @page "/case/edit/{id:int}"
 @using QdaoCaseManager.Application.Cases.Dtos
 @using QdaoCaseManager.DTOs.Common.Models
+@using QdaoCaseManager.DTOs.Enums
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject HttpClient HttpClient
 @inject NavigationManager NavigationManager
