--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Register.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Register.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.WebUtilities
 @using QdaoCaseManager.Infrastructure.Data
 @using QdaoCaseManager.Domain.Entities
+@using QdaoCaseManager.Infrastructure.identity
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
