--- a/QdaoCaseManager/QdaoCaseManager/Components/_Imports.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/_Imports.razor
@@ -10,3 +10,4 @@
 @using QdaoCaseManager
 @using QdaoCaseManager.Client
 @using QdaoCaseManager.Components
+@using QdaoCaseManager.Infrastructure.identity
