--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/Index.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/Index.razor
@@ -83,7 +83,7 @@ else
                         </span>
                     </td>
                     <td>@caseItem.AssignedToUserName</td>
-                    <td>@caseItem.CreateDate</td>
+                    <td>@caseItem.Created</td>
                     <td>
                         <a href='/case/edit/@caseItem.Id' class="btn btn-outline-dark" role="button">
                             Edit
