--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ConfirmEmail.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ConfirmEmail.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.WebUtilities
 @using QdaoCaseManager.Infrastructure.Data
 @using QdaoCaseManager.Domain.Entities
+@using QdaoCaseManager.Infrastructure.identity
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityRedirectManager RedirectManager
