--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ExternalLogin.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ExternalLogin.razor
@@ -8,8 +8,9 @@
 @using Microsoft.AspNetCore.WebUtilities
 @using QdaoCaseManager.Infrastructure.Data
 @using QdaoCaseManager.Domain.Entities
+@using QdaoCaseManager.Infrastructure.identity
 
-@inject SignInManager<ApplicationUser> SignInManager
+@inject SignInManager<ApplicationUser> SignInManager                                                                                                                                                                                                                 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
 @inject IEmailSender<ApplicationUser> EmailSender
