--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Login.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Login.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Infrastructure.Data
 @using QdaoCaseManager.Domain.Entities
+@using QdaoCaseManager.Infrastructure.identity
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject ILogger<Login> Logger
