--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/LoginWithRecoveryCode.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/LoginWithRecoveryCode.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Infrastructure.Data
 @using QdaoCaseManager.Domain.Entities
+@using QdaoCaseManager.Infrastructure.identity
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
