--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Infrastructure.Data
 @using QdaoCaseManager.Domain.Entities
+@using QdaoCaseManager.Infrastructure.identity
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
