--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ResetPassword.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ResetPassword.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.WebUtilities
 @using QdaoCaseManager.Infrastructure.Data
 @using QdaoCaseManager.Domain.Entities
+@using QdaoCaseManager.Infrastructure.identity
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
